基本播放功能

--- a/layout/container.jade
+++ b/layout/container.jade
@@ -1,5 +1,4 @@
 div.container.full-size
     div.container-video.full-size
-        video.container-video-entity
     div.container-danmaku.full-size
-    div.container-controller
+    include controller
