--- a/layout/preload.jade
+++ b/layout/preload.jade
@@ -2,5 +2,5 @@
 
 div.preload.full-size
     div.preload-icon.absolute-center
-    p.preload-version.absolute-center AcFun Html5 Player
+    p.preload-version.absolute-center AcFun Html5 Player - Ver. 北山しずく
     p.preload-hint.absolute-center 正在初始化
