--- a/style/main.styl
+++ b/style/main.styl
@@ -7,6 +7,7 @@
 
 @import "widget.styl"
 @import "global.styl"
+@import "animate.styl"
 
 .player
 
@@ -15,9 +16,13 @@
 
   color #fff
   font-size 12px
+  font-family 'Microsoft YaHei', '微软雅黑', tahoma, arial, simsun, '宋体'
 
   // 预载入
   @import "preload.styl"
 
   // 主体
   @import "container.styl"
+
+  // 控制
+  @import "controller.styl"
