基本功能已经完成

--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,7 @@ html
         meta(name="viewport",content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no")
         link(rel="stylesheet",href="style/main.css")
         script(src="http://static.acfun.mm111.net/dotnet/20130418/script/jquery.2.1.1.min.js")
+        script(src="bin/CommentCoreLibrary.js")
         script(src="bin/shizuku.js")
     body
         div.player
