--- a/layout/controller.jade
+++ b/layout/controller.jade
@@ -10,3 +10,4 @@ div.controller
             div.controller-line-output-loaded(style='width:5%')
             div.controller-line-output-played(style='width:0%')
             input.controller-line-output-range(type="range" ,min="0" ,max="0",value="0")
+div.toolTip
