--- a/style/controller.styl
+++ b/style/controller.styl
@@ -10,6 +10,8 @@
   right 4%
   bottom 40px
   height 80px
+
+  z-index 10
   .controller-btn-play, .controller-btn-fullscreen
     height 80px
     width 80px
@@ -127,3 +129,16 @@
   background-position 0 -832px
   &:hover
     background-position 0 -1144px
+
+
+.toolTip
+  background rgba(0, 0, 0, .6)
+  border-radius 20px
+  position absolute
+  bottom 150px
+  height 40px
+  line-height 40px
+  padding 3px 20px
+  font-size 20px
+  display none
+  z-index 10
