--- a/style/main.styl
+++ b/style/main.styl
@@ -11,6 +11,8 @@
 
 .player
 
+  background: #111;
+
   width 100%
   height 100%
 
@@ -23,6 +25,9 @@
 
   // 主体
   @import "container.styl"
+
+  // 弹幕
+  @import "danmaku.styl"
 
   // 控制
   @import "controller.styl"
