调整优先画质为普通

--- a/style/controller.styl
+++ b/style/controller.styl
@@ -61,6 +61,8 @@
         background: linear-gradient(to bottom, #bac1c5 0%, #6e7781 100%);
       /* W3C */
       .controller-line-output-played
+        border-top-right-radius 0
+        border-bottom-right-radius 0
         background: #40b8e0; /* Old browsers */
         background: -moz-linear-gradient(top, #40b8e0 0%, #157bcd 100%); /* FF3.6+ */
         background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #40b8e0), color-stop(100%, #157bcd)); /* Chrome,Safari4+ */
@@ -142,3 +144,4 @@
   font-size 20px
   display none
   z-index 10
+
